# base_lib

./: .gitignore  CMakeLists.txt  README.MD  base_lib.natvis  base_lib.sln  base_lib.vcxproj  base_lib.vcxproj.filters
include/: Array2D.h  Base64.h  BasicTypes.h  BinaryStream.h  Color.h  Compound.h  ConversionPointer.h  DateTime.h  FastOperator.h  File.h  IConvertible.h  IData.h  ISerializable.h  List.h  LogStream.h  Logger.h  Margins.h  Path.h  Pointers.h  Proces.h  Quaternion.h  Random.h  Rect.h  Regex.h  String.h  SystemIO.h  Tree1D.h  Tree2D.h  Utils.h  Vector2.h  Vector3.h  Version.h  framework.h  performance.h  stb.h
include/base_lib/: Array.h  Array2D.h  Assert.h  Base64.h  BasicTypes.h  BinaryStream.h  Color.h  Compound.h  ConversionPointer.h  Delegate.h  FastOperator.h  File.h  Graph.h  IConvertible.h  IData.h  ISerializable.h  List.h  LogStream.h  Logger.h  Map.h  Margins.h  Math.h  Matrix4x4.h  Name.h  Pair.h  Path.h  Paths.h  Pointers.h  Proces.h  Quaternion.h  Random.h  Rect.h  Regex.h  Set.h  SimpleMap.h  StreamUtils.h  String.h  SystemIO.h  TeeBuf.h  TextReader.h  (+9 more)
src/: BInaryStream.cpp  Base64.cpp  Color.cpp  Compound.cpp  DateTime.cpp  File.cpp  LogStream.cpp  Logger.cpp  Margins.cpp  Matrix4x4.cpp  Name.cpp  Path.cpp  Process.cpp  Quaternion.cpp  Rect.cpp  Regex.cpp  String.cpp  SystemIO.cpp  TeeBuf.cpp  TextReader.cpp  Utils.cpp  Vector2.cpp  Vector3.cpp  Version.cpp  stb.cpp
tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
